# home-budget

./: .env.example  README.md  home_budget.sqlite  main.py  pyproject.toml
home_budget/: __init__.py  app.py  config.py  db.py  schemat.sql
home_budget/frontend/: app.js  defines.js  formatter.js  index.html  styles.css
home_budget/models/: property.py
home_budget/repositories/: property.py
src/: requirements.txt
src/property/: property.py  property_csv.py  property_summary.py
src/spending/: spending.py
tests/integration/: test_repositories_property.py
