[project]
name = "home-budget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.5",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=9.0.2"]
